--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "beautifulsoup4>=4.13.4",
+    "coverage>=7.8.0",
     "django==5.2",
     "pillow>=11.2.1",
     "pytz>=2025.2",
