--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,11 @@ requires-python = ">=3.12"
 dependencies = [
     "beautifulsoup4>=4.13.4",
     "coverage>=7.8.0",
-    "django==5.2",
+    "django>=4.2,<5.0",
+    "django-q==1.3.4",
     "pillow>=11.2.1",
     "pytz>=2025.2",
     "requests>=2.32.3",
     "ruff>=0.11.6",
+    "setuptools>=79.0.0",
 ]
