Split settings between different envs

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ TICKETMASTER_API_KEY=your_api_key_here
 DJANGO_SETTINGS_MODULE=music_events_project.settings
 DJANGO_DEBUG=True
 DJANGO_SECRET_KEY=your-secret-key-here
+DJANGO_ENV=dev
