--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,9 @@ dependencies = [
     "django>=4.2,<5.0",
     "django-q==1.3.4",
     "pillow>=11.2.1",
+    "pillow-avif-plugin>=1.5.1",
     "pytz>=2025.2",
+    "redis>=5.2.1",
     "requests>=2.32.3",
     "ruff>=0.11.6",
     "setuptools>=79.0.0",
