--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "coverage>=7.8.0",
     "django>=4.2,<5.0",
     "django-q==1.3.4",
+    "django-q2>=1.7.6",
     "pillow>=11.2.1",
     "pillow-avif-plugin>=1.5.1",
     "pytz>=2025.2",
