Attempt at creating functional browser testing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "django-q2>=1.7.6",
     "pillow>=11.2.1",
     "pillow-avif-plugin>=1.5.1",
+    "playwright>=1.51.0",
+    "pytest>=8.3.5",
     "pytz>=2025.2",
     "redis>=5.2.1",
     "requests>=2.32.3",
