--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,35 @@
-Django==4.2.11
-Pillow==11.1.0
-requests==2.32.3
-beautifulsoup4==4.13.3
+arrow==1.3.0
+asgiref==3.8.1
+beautifulsoup4==4.13.4
+blessed==1.20.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+coverage==7.8.0
+django==4.2.20
+django-picklefield==3.3
+django-q==1.3.4
+django-q2==1.7.6
+greenlet==3.2.0
+idna==3.10
+iniconfig==2.1.0
+packaging==25.0
+pillow==11.2.1
+pillow-avif-plugin==1.5.1
+playwright==1.51.0
+pluggy==1.5.0
+pyee==12.1.1
+pytest==8.3.5
+pytest-django==4.11.1
+python-dateutil==2.9.0.post0
 pytz==2025.2
-django-q==1.3.9
+redis==5.2.1
+requests==2.32.3
+ruff==0.11.6
+setuptools==79.0.0
+six==1.17.0
+soupsieve==2.6
+sqlparse==0.5.3
+types-python-dateutil==2.9.0.20241206
+typing-extensions==4.13.2
+urllib3==2.4.0
+wcwidth==0.2.13
