--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,10 @@ dependencies = [
     "django>=4.2,<5.0",
     "django-q==1.3.4",
     "django-q2>=1.7.6",
+    "gunicorn>=23.0.0",
     "pillow>=11.2.1",
     "pillow-avif-plugin>=1.5.1",
+    "psycopg>=3.2.6",
     "pytest>=8.3.5",
     "pytest-django>=4.11.1",
     "pytz>=2025.2",
