--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,42 @@
 version: '3.8'
 
 services:
-  web:
-    build: .
+  web-prod:
+    build:
+      context: .
+      dockerfile: Containerfile.prod
     ports:
-      - "8000:8000"
+      - "8001:8000"
     environment:
       - TICKETMASTER_API_KEY=${TICKETMASTER_API_KEY}
-      - DJANGO_SETTINGS_MODULE=music_events_project.settings
-      - DJANGO_DEBUG=True
-      - DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY:-insecure-development-key-change-in-production}
+      - DJANGO_SETTINGS_MODULE=music_events_project.settings.prod
+      - DJANGO_DEBUG=False
+      - DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY:-secure-production-key}
+      - DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
+      - ALLOWED_HOSTS=localhost,127.0.0.1
+      - POSTGRES_DB=musicevents
+      - POSTGRES_USER=musicevents
+      - POSTGRES_PASSWORD=musicevents
+      - POSTGRES_HOST=db
+      - POSTGRES_PORT=5432
+      - CORS_ALLOWED_ORIGINS=http://localhost:8001
+      - DJANGO_SECURE_SSL_REDIRECT=False
     volumes:
       - ./media:/app/media
       - ./static:/app/static
+    depends_on:
+      - db
+
+  db:
+    image: postgres:15
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=musicevents
+      - POSTGRES_USER=musicevents
+      - POSTGRES_PASSWORD=musicevents
+    ports:
+      - "5432:5432"
+
+volumes:
+  postgres_data:
