--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,10 +22,14 @@ services:
       - CORS_ALLOWED_ORIGINS=http://localhost:8001
       - DJANGO_SECURE_SSL_REDIRECT=False
     volumes:
-      - ./media:/app/media
-      - ./static:/app/static
+      - django_media:/app/media
+      - django_staticfiles:/app/staticfiles
     depends_on:
       - db
+    command: >
+      bash -c "/.venv/bin/python3 manage.py migrate --noinput &&
+               /.venv/bin/python3 manage.py collectstatic --noinput &&
+               gunicorn music_events_project.wsgi:application --bind 0.0.0.0:8000 --workers 3 --threads 4 --timeout 30 --preload"
 
   db:
     image: postgres:15
@@ -40,3 +44,5 @@ services:
 
 volumes:
   postgres_data:
+  django_staticfiles:
+  django_media:
