--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "requests>=2.32.3",
     "ruff>=0.11.6",
     "setuptools>=79.0.0",
+    "whitenoise>=6.9.0",
 ]
 
 [project.optional-dependencies]
