--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "requests>=2.32.3",
     "ruff>=0.11.6",
     "setuptools>=79.0.0",
+    "spotipy>=2.25.1",
     "whitenoise>=6.9.0",
 ]
 
