add environ module and db url

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,14 @@
+# Django settings
+DEBUG=False
+DJANGO_SECRET_KEY=your-secret-key-here-minimum-32-chars-long
+DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
+DJANGO_SETTINGS_MODULE=music_events_project.settings
+DJANGO_ENV=dev
+
+# Database configuration
+DATABASE_URL=postgres://musicevents:musicevents@postgres:5432/musicevents
+
+# API Keys
 # Required for Ticketmaster API integration
 TICKETMASTER_API_KEY=your_api_key_here
 
@@ -10,8 +21,9 @@ TICKETMASTER_API_KEY=your_api_key_here
 SPOTIFY_CLIENT_ID=your_spotify_client_id_here
 SPOTIFY_CLIENT_SECRET=your_spotify_client_secret_here
 
-# Django settings
-DJANGO_SETTINGS_MODULE=music_events_project.settings
-DJANGO_DEBUG=True
-DJANGO_SECRET_KEY=your-secret-key-here
-DJANGO_ENV=dev
+# Site configuration
+SITE_NAME=music.madrid
+SITE_LOGO=images/logo.png
+
+# CORS settings
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
