--- a/charts/musicevents/templates/secret.yaml
+++ b/charts/musicevents/templates/secret.yaml
@@ -11,10 +11,8 @@ data:
   spotify-client-id: {{ .Values.spotifyClientId | b64enc | quote }}
   spotify-client-secret: {{ .Values.spotifyClientSecret | b64enc | quote }}
   
-  # Database credentials
-  postgres-db: {{ .Values.database.name | b64enc | quote }}
-  postgres-user: {{ .Values.database.user | b64enc | quote }}
-  postgres-password: {{ .Values.database.password | b64enc | quote }}
+  # Database URL
+  database-url: {{ .Values.databaseUrl | b64enc | quote }}
   
   # Admin credentials
   admin-username: {{ .Values.adminUsername | b64enc | quote }}
