--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "beautifulsoup4>=4.13.4",
     "coverage>=7.8.0",
     "django>=4.2,<5.0",
+    "django-environ>=0.12.0",
     "django-q2>=1.7.6",
     "gunicorn>=23.0.0",
     "pillow>=11.2.1",
